<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".QuizActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/extra"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/five" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/sample_question" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="9dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:onClick="checkSelection"
                android:text="@string/sample_answer1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:onClick="checkSelection"
                android:text="@string/sample_answer2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:onClick="checkSelection"
                android:text="@string/sample_answer3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:onClick="checkSelection"
                android:text="@string/sample_answer4" />
        </RadioGroup>

    </LinearLayout>

    <ImageButton
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:onClick="prevQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/prev" />

    <ImageButton
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="#00FFFFFF"
        android:onClick="submitTest"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintStart_toEndOf="@+id/prevBtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/submit" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="#00FFFFFF"
        android:onClick="nextQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/next" />

</androidx.constraintlayout.widget.ConstraintLayout>